--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,16 +2,49 @@
     <%= link_to "home", posts_path %>
 </nav>
 
+
+<ul>
+    <%= @posts.each do |post| %>
+
+        <li>
+            <%= link_to post.content, post_path(post) %>
+            <%= post.formatted_created_at %>
+            <button type="button" data-controller="clipboard" data-clipboard-text-value="<%= post.content %>" data-action="click->clipboard#copy">복사하기</button>
+        </li>
+    <% end %>
+</ul>
+
 <%= form_with model: @post, url: posts_path, local: true do |f| %>
     <%= f.label :content, "내용" %>
     <%= f.text_area :content %>
     <%= f.submit "등록" %>
 <% end %>
 
-<%= @posts.each do |post| %>
-    <ol>
-        <li>
-            <%= post.content %>
-        </li>
-    </ol>
-<% end %>
+<script>
+
+  function copyToClipboard(text) {
+    navigator.clipboard.writeText(text).then(() => {
+      showToast("복사되었습니다!");
+    }).catch(err => {
+      console.error("복사 실패:", err);
+    });
+  }
+
+  function showToast(message) {
+    let toast = document.createElement("div");
+    toast.textContent = message;
+    toast.style.position = "fixed";
+    toast.style.bottom = "30px";
+    toast.style.left = "50%";
+    toast.style.transform = "translateX(-50%)";
+    toast.style.backgroundColor = "rgba(0,0,0,0.7)";
+    toast.style.color = "#fff";
+    toast.style.padding = "10px 20px";
+    toast.style.borderRadius = "5px";
+    toast.style.zIndex = "1000";
+    document.body.appendChild(toast);
+    setTimeout(() => {
+      toast.remove();
+    }, 2000);
+  }
+</script>
