--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,6 +5,7 @@
         <li>
             <%= link_to post_content(post), post_path(post) %>
             <%= post.formatted_created_at %>
+            <%= display_user(post.user) %>
             <% if show_copy_button?(post) %>
               <button type="button" data-controller="clipboard" data-clipboard-text-value="<%= post.content %>" data-action="click->clipboard#copy">복사하기</button>
             <% end %>
