--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,7 @@
 
         <% if user_signed_in? %>
           <span>
+          <%= link_to current_user.name, user_path(current_user) %>
             <%= (current_user.name.presence || current_user.email) %>님
           </span>
           <%= button_to "로그아웃", destroy_user_session_path, method: :delete %>
